
Fri Jul 19 18:38:38 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* configure.in, Makefile.am, mono.pc.in: add a mono.pc file for use
	with pkg-config.
	* */Makefile.am: makefile overhaul to create a shared libmono library.
	* */*.h: do not include config.h in headers that should be installed.

2002-07-12  Dick Porter  <dick@ximian.com>

	* acconfig.h:
	* configure.in: Check the size of sockaddr_un.sun_path

2002-06-23  Miguel de Icaza  <miguel@ximian.com>

	* man/Makefile.am (man_MANS): Added new man page

	* man/mono-config.5: New manual page describing the mono-config
	file format. 

2002-06-10  Jaroslaw Kowalski <jarek@atm.com.pl>

	* configure.in: added checks for MSG_NOSIGNAL

2002-05-30  Daniel Morgan <danmorg@sc.rr.com>

	* doc/ado-net: update the ado-net web page on go-mono.com
	input parameters support, beginnings of Mono.Data.MySQL 
	and System.Data.OleDb, updated the sample source code,
	and output from a PostgresTest

2002-05-21  Martin Baulig  <martin@gnome.org>

	* mono.1: Documented the "--debug-args" debugging arguments.

2002-05-21  Martin Baulig  <martin@gnome.org>

	* mono.1: Updated to reflect my latest changes and beautified this a bit.
	(FIXME: There are still command line argument which aren't documented here.)

2002-05-19  Daniel Morgan <danmorg@sc.rr.com>

	* doc/ado-net: updated page to include C# code snippets using
	System.Data.  Update status: handle reading NULL values, DataSet/DataAdapter
	works, executing/reading multiple results, and stored procedures.
	And other tweaks about the providers.  

2002-05-19  Martin Baulig  <martin@gnome.org>

	* mono/Makefile.am (SUBDIRS): Added `os', it's referenced by
	interpreter/Makefile.am.

Wed May 15 12:22:09 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* configure.in: search for pthread functions also in libc_r (patch
	from Garrett Rooney <rooneg@electricjellyfish.net>).

2002-05-11  Daniel Morgan <danmorg@sc.rr.com>

	* doc/ado-net: added instructions for installing PostgreSQL on Linux