@@ -9,4 +9,4 @@ Description: Mono Runtime
 Version: @VERSION@
 Requires: glib-2.0 gmodule-2.0
 Libs: -L${libdir} -lmono
-Cflags:
+Cflags: -I${includedir}
