@@ -13,6 +13,10 @@ mint_SOURCES =		\
 mint_LDADD =				\
 	../arch/libmonoarch.la		\
 	../metadata/libmonoruntime.la	\
+	../metadata/libmetadata.la	\
+	../io-layer/libwapi.la		\
+	../utils/libmonoutils.la	\
+	../os/libmonoos.la		\
 	$(GLIB_LIBS)			\
 	$(GMODULE_LIBS) 		\
 	-lm
